Fix parallel identification.